k8s/base/neighbour.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting
  namespace: payments
  labels:
    app: reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting
  template:
    metadata:
      labels:
        app: reporting
    spec:
      serviceAccountName: reporting
      automountServiceAccountToken: false

      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: client
          image: curlimages/curl:8.8.0
          imagePullPolicy: IfNotPresent
          command: ["sleep", "infinity"]

          securityContext:
            runAsNonRoot: true
            runAsUser: 100
            runAsGroup: 100
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "50m"
              memory: "32Mi"
